<resources>
    <string name="app_name">ValueTown</string>
    <string name="app_name_b">Value Town</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- nav menu -->
    <!-- nav menu:button -->
    <string name="store">Store</string>
    <string name="users">Users</string>
    <string name="mystore">Change store</string>
    <string name="setting">Settings</string>
    <!-- nav menu:toast -->
    <string name="toaststore">Store tab selected</string>
    <string name="toastusers">Users tab selected </string>
    <string name="toastmystore">My store tab selected</string>
    <string name="toastsetting">Setting tab selected</string>
    <!-- swipe tabs -->
    <string name="sales">Sales</string>
    <string name="menu">Menus</string>
    <string name="starter">Starters</string>
    <string name="meal">Meals</string>
    <string name="dessert">Desserts</string>
    <string name="drink">Drinks</string>
    <string name="title_activity_store_detail">StoreDetailActivity</string>
    <string name="title_activity_main">Your store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">Your Cart</string>
    <string name="title_activity_command">Your command</string>
    <string name="title_activity_user">Your information</string>

    <!-- - - textview- - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="user_title">Edit Account Information</string>
    <string name="user_name">Name: </string>
    <string name="user_surname">Surname: </string>
    <string name="user_addr">Address: </string>
    <string name="user_tel">Phone: </string>
    <string name="user_code">City code: </string>
    <string name="command_title">Command recap</string>
    <string name="user_magasin">Current store: </string>
    <string name="user_magasin_code">Store city code: </string>
    <string name="info_title">About </string>
    <string name="info_version">Version: </string>
    <string name="info_dev">Developper: </string>
    <string name="info_contact">Contact: </string>
    <string name="info_version2">1.0.3</string>
    <string name="info_dev2">Fobis Samuel</string>
    <string name="info_contact2">samfobis@gmail.com</string>
    <string name="info_licence">All right reserved</string>
    <string name="devise">Dollar(s)</string>
    <string name="price">Price</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="total_panier">Cart price</string>
    <string name="ing">Ingredients: </string>
    <string name="le_total">Your cart price is:  </string>
    <string name="reset_cart">Reset your cart</string>

    <!-- - - button - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="user_cancel">Cancel</string>
    <string name="user_save">Save</string>
    <string name="user_edit">Edit</string>
    <string name="user_return">Return</string>
    <string name="user_map">Google map</string>

    <!-- - - -toast  - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="user_toast_name">Enter your name!</string>
    <string name="user_toast_surname">Enter your surname!</string>
    <string name="user_toast_addr">Enter your address!</string>
    <string name="user_toast_code">Enter your city code!</string>
    <string name="user_toast_tel">Enter your phone number!</string>
    <string name="user_toast_cart"> was put in your cart!</string>
    <string name="user_toast_reset">Your cart is now empty!</string>
    <string name="user_toast_vide">Your cart is empty</string>
    <string name="toast_mag">Selected store: </string>
    <!-- - - -alert  - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="popup_title_conf">Confirmation</string>
    <string name="popup_title_conf2">Order Send!</string>
    <string name="popup_content_conf">Your order will be send. \nWould you confirm your order ?\nCity store: </string>
    <string name="popup_validation">Confirm</string>
    <string name="popup_cancel">Cancel</string>
    <string name="popup_ok">Ok!</string>

</resources>
