<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_add_shopping_cart_black_48dp"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_face_black_48dp"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_mystore"
            android:icon="@drawable/ic_store_black_48dp"
            android:title="@string/mystore" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/setting" />
    </group>
</menu>
