<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mobile.valuetown.InfoActivity"
    tools:showIn="@layout/activity_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info_title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_dev"
        android:id="@+id/tvdev"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_contact"
        android:id="@+id/tvcontact"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvdev"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_version"
        android:id="@+id/tvversion"
        android:layout_below="@+id/tvcontact"
        android:layout_alignRight="@+id/tvcontact"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_licence"
        android:id="@+id/tvlicence"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvversion"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_dev2"
        android:id="@+id/tvdev2"
        android:layout_alignTop="@+id/tvdev"
        android:layout_alignEnd="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_contact2"
        android:id="@+id/tvcontact2"
        android:layout_alignTop="@+id/tvcontact"
        android:layout_alignEnd="@+id/tvdev2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_version2"
        android:id="@+id/tvversion2"
        android:layout_alignTop="@+id/tvversion"
        android:layout_alignEnd="@+id/tvcontact2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_return"
        android:id="@+id/inforeturn"
        android:layout_below="@+id/tvlicence"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
